--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main  # or the default branch of your repository
+  workflow_dispatch:
 
 jobs:
   build-and-push:
